fix:fixed product picture in hero banner stretch when media screen<=768px

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -616,25 +616,28 @@ span.text-red {
   margin-top: 10px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 768px) {
+  body {
+  }
+
   .hero-banner-container {
     height: 560px;
   }
   .hero-banner-image {
-    width: 77%;
+    /* width: 77%;
     height: 62%;
     top: -2%;
-    right: -6%;
+    right: -6%; */
   }
   .footer-banner-container {
     height: 560px;
     margin-top: 80px;
   }
   .footer-banner-image {
-    width: 77%;
+    /* width: 77%;
     left: 30%;
     top: 6%;
-    height: 56%;
+    height: 56%; */
   }
   .banner-desc .left h3 {
     font-weight: 900;
